infer/tests/codetoanalyze/objc/errors/category_procdesc/EOCPerson.dot
digraph iCFG {
6 [label="6:  Call _fun_NSLog \n   n$1=_fun_NSString_stringWithUTF8String:(\"BTaking vacations\":char *) [line 16]\n  _fun_NSLog(n$1:struct objc_object *) [line 16]\n  REMOVE_TEMPS(n$1); [line 16]\n  APPLY_ABSTRACTION; [line 16]\n " shape="box"]
	

	 6 -> 5 ;
5 [label="5: Exit EOCPerson_takeVacationFromWork \n  " color=yellow style=filled]
	

4 [label="4: Start EOCPerson_takeVacationFromWork\nFormals:  self:class EOCPerson *\nLocals:  \n   DECLARE_LOCALS(&return); [line 15]\n  NULLIFY(&self,false); [line 15]\n " color=yellow style=filled]
	

	 4 -> 6 ;
3 [label="3:  Call _fun_NSLog \n   n$0=_fun_NSString_stringWithUTF8String:(\"Performing days at work\":char *) [line 11]\n  _fun_NSLog(n$0:struct objc_object *) [line 11]\n  REMOVE_TEMPS(n$0); [line 11]\n  APPLY_ABSTRACTION; [line 11]\n " shape="box"]
	

	 3 -> 2 ;
2 [label="2: Exit EOCPerson_performDaysWork \n  " color=yellow style=filled]
	

1 [label="1: Start EOCPerson_performDaysWork\nFormals:  self:class EOCPerson *\nLocals:  \n   DECLARE_LOCALS(&return); [line 10]\n  NULLIFY(&self,false); [line 10]\n " color=yellow style=filled]
	

	 1 -> 3 ;
}
